feat: user can see thier position of assets (#6)
